# graphics-course-practice

./: .gitignore
homework1/: CMakeLists.txt  main.cpp
homework1/objects/: KeyHandler.cpp  KeyHandler.h  Model.cpp  Model.h
homework1/objects/graphics/: Isolines.cpp  Isolines.h  Landscape.cpp  Landscape.h  Model.cpp  Model.h  Placeable.cpp  Placeable.h  Renderable.cpp  Renderable.h
homework1/objects/input/: KeyHandler.cpp  KeyHandler.h
homework1/objects/opengl/: ProgramAdapter.cpp  ProgramAdapter.h
homework1/structures/: Polygon.h  Vector.h  Vector3D.cpp  Vector3D.h  Vertex.h
homework1/utils/: MathUtils.cpp  MathUtils.h  ModelUtils.cpp  ModelUtils.hpp  ObjectUtils.cpp  ShaderUtils.cpp
homework2/: CMakeLists.txt  main.cpp
homework2/enums/: GLProgramType.h  GLTextureType.h
homework2/objects/graphics/: Landscape.cpp  Material.cpp  Material.h  Placeable.cpp  Placeable.h  Renderable.cpp  Renderable.h  Texture.cpp  Texture.h
homework2/objects/graphics/light/: Ambient.h  Sun.cpp  Sun.h
homework2/objects/graphics/light/structures/: DirectionLight.h
homework2/objects/graphics/renderable/: Placeable.cpp  Placeable.h  Renderable.cpp  Renderable.h  ScreenView.cpp  ScreenView.h
homework2/objects/graphics/textures/: Material.cpp  Material.h  Texture.cpp  Texture.h
homework2/objects/input/: KeyHandler.cpp  KeyHandler.h
homework2/objects/opengl/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GLProgram.cpp  GLProgram.h  LightRender.h
homework2/structures/: PointLight.h  Vector3F.h  Vertex.h
homework2/utils/: MathUtils.h  ModelUtils.cpp  ObjectUtils.h  ShaderUtils.cpp  ShaderUtils.h
homework2/utils/shaders/: MainShaders.h  ScreenViewShader.h  ShadowShader.h  light_shader.frag  main_shader.frag  main_shader.vert
homework3/: CMakeLists.txt  main.cpp
homework3/enums/: GLTextureType.h
homework3/objects/graphics/light/: Sun.cpp  Sun.h
homework3/objects/graphics/light/structures/: PointLight.h
homework3/objects/graphics/particles/: FireParticle.cpp
homework3/objects/graphics/renderable/: Renderable.cpp  Renderable.h
homework3/objects/graphics/textures/: Material.cpp  Texture.cpp  Texture.h
homework3/objects/graphics/volumes/: CubeVolume.h
homework3/objects/opengl/: Camera.cpp  Camera.h  GLProgram.cpp  GLProgram.h
homework3/utils/: MathUtils.h  ObjectUtils.h
homework3/utils/shaders/: light_shader.frag  main_shader.vert  shadow_shader_depth.vert  volumetric_shader.frag  volumetric_shader.vert
practice1/: CMakeLists.txt  main.cpp
practice1/utils/: ShaderUtils.cpp  ShaderUtils.h
practice10/: CMakeLists.txt  main.cpp
practice10/enums/: GLTextureType.h
practice10/objects/graphics/renderable/: Placeable.h  Renderable.cpp  Renderable.h
practice10/objects/graphics/textures/: Material.h  Texture.cpp
practice10/structures/: Vertex.h
practice10/utils/: MathUtils.h  ObjectUtils.h
practice10/utils/shaders/: light_shader.frag  main_shader.frag  main_shader.vert
practice11/: CMakeLists.txt  main.cpp
practice11/enums/: GLProgramType.h
practice11/objects/graphics/particles/: FireParticle.cpp  FireParticle.h
practice11/objects/graphics/textures/: Texture.cpp
practice11/objects/opengl/: FrameBuffer.h  GLProgram.h  LightRender.cpp
practice11/structures/: Particle.h
practice11/utils/shaders/: particles_shader.frag  particles_shader.geom  particles_shader.vert
practice12/: CMakeLists.txt  main.cpp
practice12/enums/: GLProgramType.h
practice12/objects/opengl/: Camera.h  GLProgram.h
practice12/structures/: Vertex.h
practice12/utils/: ShaderUtils.h
practice12/utils/shaders/: light_shader.frag  particles_shader.frag  volumetric_shader.frag  volumetric_shader.vert
practice2/: CMakeLists.txt  main.cpp
practice2/objects/: KeyHandler.cpp  KeyHandler.h  ProgramAdapter.cpp  ProgramAdapter.h
practice2/utils/: ShaderUtils.cpp
practice3/: CMakeLists.txt  main.cpp
practice3/objects/: KeyHandler.cpp  KeyHandler.h
practice3/structures/: Vector.h  Vertex.h
practice3/utils/: BezierUtils.cpp  BezierUtils.h
practice4/: CMakeLists.txt  main.cpp
practice4/objects/: KeyHandler.cpp  KeyHandler.h  Model.cpp  Model.h  ProgramAdapter.h
practice4/structures/: Position.h  Vector.h  Vertex.h
practice4/utils/: ObjectUtils.cpp  ObjectUtils.hpp
practice5/: CMakeLists.txt  main.cpp
practice5/objects/graphics/: Isolines.cpp  Placeable.cpp  Placeable.h  Renderable.cpp  Renderable.h  Texture.cpp  Texture.h
practice5/objects/opengl/: ProgramAdapter.cpp  ProgramAdapter.h
practice5/structures/: ScreenPosition.h
practice5/utils/: ModelUtils.cpp  ShaderUtils.cpp
practice6/: CMakeLists.txt  main.cpp
practice6/objects/graphics/: Placeable.cpp  Placeable.h  Renderable.cpp  Texture.cpp  Texture.h
practice6/objects/opengl/: FrameBuffer.h  ProgramAdapter.cpp  ProgramAdapter.h  ScreenView.cpp  ScreenView.h
practice6/structures/: Vector2I.h
practice6/utils/: MathUtils.h  ModelUtils.hpp  ShaderUtils.cpp
practice7/: CMakeLists.txt  main.cpp
practice7/objects/graphics/: Isolines.cpp  Isolines.h  LightPoint.cpp  LightPoint.h  Placeable.cpp  Placeable.h  Renderable.h  Texture.cpp  Texture.h
practice7/objects/opengl/: ProgramAdapter.cpp  ProgramAdapter.h
practice7/structures/: Vector2F.h  Vector4F.h
practice7/utils/: ShaderUtils.cpp  ShaderUtils.h
practice8/: CMakeLists.txt  main.cpp
practice8/objects/graphics/: Landscape.h  Renderable.cpp  Texture.cpp  Texture.h
practice8/objects/graphics/basic/: Plane.h
practice8/objects/opengl/: FrameBuffer.cpp  ProgramAdapter.cpp  ProgramAdapter.h
practice8/structures/: Vector3F.cpp
practice8/utils/: MathUtils.cpp  MathUtils.h  ShaderUtils.cpp
practice9/: CMakeLists.txt  main.cpp
practice9/objects/input/: KeyHandler.cpp  KeyHandler.h
practice9/objects/opengl/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GLProgram.cpp  GLProgram.h
practice9/utils/: MathUtils.h  ObjectUtils.h  ShaderUtils.h
practice9/utils/shaders/: ScreenViewShader.h  light_shader.frag  main_shader.frag  shadow_shader.frag  shadow_shader.vert  shadow_shader_depth.frag  shadow_shader_depth.vert
(+23 files in other folders)
